<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/contact_details_title"
            app:titleCentered="true"
            app:menu="@menu/details_top_app_bar"
            app:navigationIcon="@drawable/back"
            app:titleTextAppearance="@style/Toolbar.TitleText"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="0dp"
            android:layout_width="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/photoCard"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginTop="60dp"
                android:layout_gravity="center"
                app:strokeWidth="0dp"
                app:cardCornerRadius="250dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/profile_round" />

            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/decoration"
                android:layout_width="178dp"
                android:layout_height="178dp"
                android:src="@drawable/decoration"
                app:layout_constraintStart_toStartOf="@id/photoCard"
                app:layout_constraintTop_toTopOf="@id/photoCard"
                app:layout_constraintEnd_toEndOf="@id/photoCard"
                app:layout_constraintBottom_toBottomOf="@id/photoCard"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/ubuntu_bold"
                android:gravity="center"
                android:text="@string/contactName"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/decoration" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="@color/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/name"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_light"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/colorOnPrimary"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/phone"/>

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/call_card"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginStart="60dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                app:cardCornerRadius="250dp"-->
<!--                app:cardBackgroundColor="#0584FE"-->
<!--                app:layout_constraintTop_toBottomOf="@id/email"-->
<!--                app:layout_constraintStart_toStartOf="parent">-->
<!--                -->
<!--                <ImageView-->
<!--                    android:layout_width="26dp"-->
<!--                    android:layout_height="26dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/baseline_call_24"/>-->
<!--                -->
<!--            </com.google.android.material.card.MaterialCardView>-->

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/sms_card"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                app:cardCornerRadius="250dp"-->
<!--                app:cardBackgroundColor="#0584FE"-->
<!--                app:layout_constraintTop_toBottomOf="@id/email"-->
<!--                app:layout_constraintStart_toEndOf="@+id/call_card"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/video_card">-->

<!--                <ImageView-->
<!--                    android:layout_width="26dp"-->
<!--                    android:layout_height="26dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/baseline_sms_24"/>-->

<!--            </com.google.android.material.card.MaterialCardView>-->

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/video_card"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_marginEnd="60dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                app:cardCornerRadius="250dp"-->
<!--                app:cardBackgroundColor="#0584FE"-->
<!--                app:layout_constraintTop_toBottomOf="@id/email"-->
<!--                app:layout_constraintEnd_toEndOf="parent">-->

<!--                <ImageView-->
<!--                    android:layout_width="26dp"-->
<!--                    android:layout_height="26dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/baseline_videocam_24"/>-->

<!--            </com.google.android.material.card.MaterialCardView>-->
<!--            -->
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/profile_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/email"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notify_card"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_divider">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/birthday_switch"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="300dp"
                    android:scaleX="1.3"
                    android:scaleY="1.3"
                    android:gravity="center"/>

                <ImageView
                    android:id="@+id/birthday_notify"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_notifications_active_24"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/birthday_notify_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/colorOnPrimary"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="22dp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@id/address_change_card"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notify_card">

                <ImageView
                    android:id="@+id/address_change"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_edit_location_24"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/address_change_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/colorOnPrimary"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="22dp"/>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@id/address_delete_card"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_change_card">

                <ImageView
                    android:id="@+id/address_delete"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_delete_24"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/address_delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address_delete"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/colorOnPrimary"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="22dp"/>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/settings_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/address_delete_card"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@id/birthday_card"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_divider">

                <ImageView
                    android:id="@+id/birthdayIv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_calendar_month_24"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/birthday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_text"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/colorOnPrimary"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="22dp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@id/address_card"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/birthday_card">

                <ImageView
                    android:id="@+id/address"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_location_on_24"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address_text"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/colorOnPrimary"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="22dp"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/note_card"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_card">

                <ImageView
                    android:id="@+id/note"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/baseline_notes_24"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:id="@+id/note_text"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:text="@string/note_text"
                    android:fontFamily="@font/ubuntu"
                    android:textColor="@color/colorOnPrimary"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="22dp"/>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>

